--- a/action.yml
+++ b/action.yml
@@ -57,10 +57,19 @@ inputs:
     default: './Dockerfile'
   BUILD_ARCHITECTURE:
     description: 'Build Architecture'
+    required: false
+    default: 'amd64'
+  BUILD_ARGS:
+    description: 'Additional build arguments for Docker build'
+    required: false
+  NO_CACHE:
+    description: 'Set to true to disable Docker cache'
+    required: false
+    default: 'false'
   
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.8'
+  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.9'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
@@ -79,5 +88,7 @@ runs:
     AZURE_CLIENT_SECRET: ${{ inputs.AZURE_CLIENT_SECRET }}
     DOCKERFILE_PATH: ${{ inputs.DOCKERFILE_PATH }}
     BUILD_ARCHITECTURE: ${{ inputs.BUILD_ARCHITECTURE }}
+    BUILD_ARGS: ${{ inputs.BUILD_ARGS }}
+    NO_CACHE: ${{ inputs.NO_CACHE }}
   args:
     - ${{ inputs.command }}
