--- a/action.yml
+++ b/action.yml
@@ -66,10 +66,14 @@ inputs:
     description: 'Set to true to disable Docker cache'
     required: false
     default: 'false'
+  PUBLISH:
+    description: 'Whether to publish the image'
+    required: false
+    default: 'false'
   
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.9'
+  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.10'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
@@ -90,5 +94,6 @@ runs:
     BUILD_ARCHITECTURE: ${{ inputs.BUILD_ARCHITECTURE }}
     BUILD_ARGS: ${{ inputs.BUILD_ARGS }}
     NO_CACHE: ${{ inputs.NO_CACHE }}
+    PUBLISH: ${{ inputs.PUBLISH }}
   args:
     - ${{ inputs.command }}
