--- a/action.yml
+++ b/action.yml
@@ -73,7 +73,8 @@ inputs:
   
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.11'
+  # image: 'docker://ghcr.io/clouddrove/enigma:v0.0.11'
+  image: 'Dockerfile'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
