feat: modified action.yml

--- a/action.yml
+++ b/action.yml
@@ -76,7 +76,7 @@ inputs:
 
 runs:
   using: 'docker'
-  # image: 'docker://ghcr.io/clouddrove/enigma:v0.0.12'
+  # image: 'docker://ghcr.io/clouddrove/enigma:v0.0.13'
   image: 'Dockerfile'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
@@ -99,7 +99,6 @@ runs:
     BUILD_ARGS: ${{ inputs.BUILD_ARGS }}
     NO_CACHE: ${{ inputs.NO_CACHE }}
     PUBLISH: ${{ inputs.PUBLISH }}
-    # ENIGMA_ENV_FILE_NAME: ${{ inputs.ENIGMA_ENV_FILE_NAME }}
+    ENIGMA_ENV_FILE_NAME: ${{ inputs.ENIGMA_ENV_FILE_NAME }}
   args:
-    - '-enigma=${{ inputs.enigma_file }}'
     - ${{ inputs.command }}
