--- a/action.yml
+++ b/action.yml
@@ -76,8 +76,7 @@ inputs:
 
 runs:
   using: 'docker'
-  # image: 'docker://ghcr.io/clouddrove/enigma:v0.0.13'
-  image: 'Dockerfile'
+  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.13'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
