--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,9 @@ inputs:
   command:
     description: 'Command to run (bake or publish)'
     required: true
+  enigma_file:
+    description: 'env file to set values in workflow'
+    required: true
   DOCKER_IMAGE:
     description: 'Docker image name'
     required: true
@@ -70,10 +73,10 @@ inputs:
     description: 'Whether to publish the image'
     required: false
     default: 'false'
-  
+
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.12'
+  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.13'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
@@ -96,4 +99,5 @@ runs:
     NO_CACHE: ${{ inputs.NO_CACHE }}
     PUBLISH: ${{ inputs.PUBLISH }}
   args:
+    - '-enigma=${{ inputs.enigma_file }}'
     - ${{ inputs.command }}
