fix: Update action.yml with new usuage

--- a/action.yml
+++ b/action.yml
@@ -100,4 +100,4 @@ runs:
     PUBLISH: ${{ inputs.PUBLISH }}
   args:
     - ${{ inputs.command }}
-    - '-enigmafile ${{ inputs.enigma_file }}'
+    - '--enigmafile ${{ inputs.enigma_file }}'
