--- a/action.yml
+++ b/action.yml
@@ -3,10 +3,10 @@ description: 'Builds, scans, tags, and pushes Docker images using the Enigma too
 
 inputs:
   command:
-    description: 'Command to run (bake, build-publish, or publish)'
+    description: 'Command to run (bake or publish)'
     required: true
-  enigma_file:
-    description: 'Path to the .enigma file to set values in the workflow'
+  enigmafile:
+    description: 'env file to set values in workflow'
     required: true
   DOCKER_IMAGE:
     description: 'Docker image name'
@@ -46,20 +46,20 @@ inputs:
     description: 'Azure Registry name.'
     required: false
   AZURE_CLIENT_ID:
-    description: 'Azure Client ID'
+    description: 'Client ID'
     required: false
   AZURE_TENANT_ID:
-    description: 'Azure Tenant ID'
+    description: 'Tenant ID'
     required: false
   AZURE_CLIENT_SECRET:
-    description: 'Azure Client Secret'
+    description: 'Client Secret'
     required: false
   DOCKERFILE_PATH:
     description: 'Path to the Dockerfile'
     required: false
     default: './Dockerfile'
   DOCKER_BUILD_ARCHITECTURE:
-    description: 'Docker Build Architecture'
+    description: 'Build Architecture'
     required: false
     default: 'amd64'
   DOCKER_BUILD_ARGS:
@@ -84,6 +84,7 @@ runs:
     AWS_REGION: ${{ inputs.AWS_REGION }}
     GCP_PROJECT_ID: ${{ inputs.GCP_PROJECT_ID }}
     GCP_REGION: ${{ inputs.GCP_REGION }}
+    DOCKER_CLEANUP: ${{ inputs.DOCKER_CLEANUP }}
     DOCKER_USERNAME: ${{ inputs.DOCKER_USERNAME }}
     DOCKER_PASSWORD: ${{ inputs.DOCKER_PASSWORD }}
     TOKEN: ${{ inputs.TOKEN }}
@@ -97,9 +98,6 @@ runs:
     DOCKER_BUILD_ARGS: ${{ inputs.DOCKER_BUILD_ARGS }}
     DOCKER_NO_CACHE: ${{ inputs.DOCKER_NO_CACHE }}
     PUBLISH: ${{ inputs.PUBLISH }}
-    DOCKER_CLEANUP: ${{ inputs.DOCKER_CLEANUP }}
-
   args:
-    - '--enigmafile'
-    - '${{ inputs.enigma_file }}'
-    - '${{ inputs.command }}'
+    - '--enigmafile ${{ inputs.enigmafile }}'
+    - ${{ inputs.command }}
