--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ inputs:
   command:
     description: 'Command to run (bake or publish)'
     required: true
-  enigmafile:
+  enigma_file:
     description: 'env file to set values in workflow'
     required: true
   DOCKER_IMAGE:
@@ -76,7 +76,7 @@ inputs:
 
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.14'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
@@ -99,5 +99,5 @@ runs:
     DOCKER_NO_CACHE: ${{ inputs.DOCKER_NO_CACHE }}
     PUBLISH: ${{ inputs.PUBLISH }}
   args:
-    - '--enigmafile ${{ inputs.enigmafile }}'
+    - '--enigmafile=${{ inputs.enigma_file }}'
     - ${{ inputs.command }}
