--- a/action.yml
+++ b/action.yml
@@ -76,7 +76,7 @@ inputs:
 
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.14'
+  image: 'Dockerfile'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
@@ -99,5 +99,5 @@ runs:
     DOCKER_NO_CACHE: ${{ inputs.DOCKER_NO_CACHE }}
     PUBLISH: ${{ inputs.PUBLISH }}
   args:
-    - '--enigmafile ${{ inputs.enigma_file }}'
+    - '--enigmafile=${{ inputs.enigma_file }}'
     - ${{ inputs.command }}
