--- a/action.yml
+++ b/action.yml
@@ -72,7 +72,7 @@ inputs:
 
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.15'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
@@ -93,7 +93,6 @@ runs:
     DOCKER_BUILD_ARCHITECTURE: ${{ inputs.DOCKER_BUILD_ARCHITECTURE }}
     DOCKER_BUILD_ARGS: ${{ inputs.DOCKER_BUILD_ARGS }}
     DOCKER_NO_CACHE: ${{ inputs.DOCKER_NO_CACHE }}
-    PUBLISH: ${{ inputs.PUBLISH }}
   args:
     - '--enigmafile=${{ inputs.enigma_file }}'
     - ${{ inputs.command }}
