--- a/action.yml
+++ b/action.yml
@@ -14,7 +14,7 @@ inputs:
   DOCKER_TAG:
     description: 'Docker image tag'
     required: true
-  CLEANUP:
+  DOCKER_CLEANUP:
     description: 'Cleanup after push (true or false)'
     required: false
     default: 'false'
@@ -36,10 +36,10 @@ inputs:
   DOCKER_PASSWORD:
     description: 'Docker Hub password'
     required: false
-  TOKEN: 
+  TOKEN:
     description: 'GitHub Token'
     required: false
-  GITHUB_USERNAME: 
+  GITHUB_USERNAME:
     description: 'GitHub Username'
     required: false
   AZURE_REGISTRY_NAME:
@@ -58,25 +58,21 @@ inputs:
     description: 'Path to the Dockerfile'
     required: false
     default: './Dockerfile'
-  BUILD_ARCHITECTURE:
+  DOCKER_BUILD_ARCHITECTURE:
     description: 'Build Architecture'
     required: false
     default: 'amd64'
-  BUILD_ARGS:
+  DOCKER_BUILD_ARGS:
     description: 'Additional build arguments for Docker build'
     required: false
-  NO_CACHE:
+  DOCKER_NO_CACHE:
     description: 'Set to true to disable Docker cache'
-    required: false
-    default: 'false'
-  PUBLISH:
-    description: 'Whether to publish the image'
     required: false
     default: 'false'
 
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.14'
+  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.15'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
@@ -84,7 +80,7 @@ runs:
     AWS_REGION: ${{ inputs.AWS_REGION }}
     GCP_PROJECT_ID: ${{ inputs.GCP_PROJECT_ID }}
     GCP_REGION: ${{ inputs.GCP_REGION }}
-    CLEANUP: ${{ inputs.CLEANUP }}
+    DOCKER_CLEANUP: ${{ inputs.DOCKER_CLEANUP }}
     DOCKER_USERNAME: ${{ inputs.DOCKER_USERNAME }}
     DOCKER_PASSWORD: ${{ inputs.DOCKER_PASSWORD }}
     TOKEN: ${{ inputs.TOKEN }}
@@ -94,10 +90,9 @@ runs:
     AZURE_TENANT_ID: ${{ inputs.AZURE_TENANT_ID }}
     AZURE_CLIENT_SECRET: ${{ inputs.AZURE_CLIENT_SECRET }}
     DOCKERFILE_PATH: ${{ inputs.DOCKERFILE_PATH }}
-    BUILD_ARCHITECTURE: ${{ inputs.BUILD_ARCHITECTURE }}
-    BUILD_ARGS: ${{ inputs.BUILD_ARGS }}
-    NO_CACHE: ${{ inputs.NO_CACHE }}
-    PUBLISH: ${{ inputs.PUBLISH }}
+    DOCKER_BUILD_ARCHITECTURE: ${{ inputs.DOCKER_BUILD_ARCHITECTURE }}
+    DOCKER_BUILD_ARGS: ${{ inputs.DOCKER_BUILD_ARGS }}
+    DOCKER_NO_CACHE: ${{ inputs.DOCKER_NO_CACHE }}
   args:
-    - '-enigma=${{ inputs.enigma_file }}'
+    - '--enigmafile=${{ inputs.enigma_file }}'
     - ${{ inputs.command }}
