--- a/.github/workflows/test-multiplatform.yml
+++ b/.github/workflows/test-multiplatform.yml
@@ -13,8 +13,6 @@ env:
 
 jobs:
   test:
-    if: ${{ true }}
-    name: Test on all platforms
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -28,7 +26,16 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{env.GO_VERSION}}
+          go-version: ${{ env.GO_VERSION }}
 
-      - name: Test
-        run: go test ./...
+      - name: Test with coverage
+        run: go test -coverprofile=coverage.out ./...
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.out
+          flags: platform-tests
+          name: Codecov Platform Tests
+          fail_ci_if_error: true
