--- a/.github/workflows/test-multiplatform.yml
+++ b/.github/workflows/test-multiplatform.yml
@@ -1,10 +1,6 @@
 on:
-  # This is configured to run on pull requests. If desired you can change it to run on all pushes.
-  # be aware that windows and MacOS takes can take a while for setup and both of them incur extra expense for Actions.
   pull_request:
-  # this will allow the tests to be run on demand
   workflow_dispatch:
-
 
 name: Test on all platforms
 
@@ -27,6 +23,9 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+
+      - name: Format Code with go fmt
+        run: go fmt ./...
 
       - name: Test with coverage
         run: go test -coverprofile=coverage.out ./...
