--- a/action.yml
+++ b/action.yml
@@ -75,16 +75,16 @@ inputs:
     default: 'false'
   HELM_CHART_PATH:
     description: 'Path of HELM CHART'
-    required: true
+    required: false
   HELM_CHART_NAME:
     description: 'HELM CHART NAME'
-    required: true
+    required: false
   HELM_CHART_VERSION:
     description: 'The Version of Helm Chart'
-    required: true
+    required: false
   HELM_REGISTRY:
     description: 'The Registry to push Helm Chart'
-    required: true
+    required: false
 
 
 runs:
@@ -113,6 +113,7 @@ runs:
     HELM_CHART_PATH: ${{ inputs.HELM_CHART_PATH }}
     HELM_CHART_NAME: ${{ inputs.HELM_CHART_NAME }}
     HELM_CHART_VERSION: ${{ inputs.HELM_CHART_VERSION }}
+    HELM_REGISTRY: ${{ inputs.HELM_REGISTRY }}
   args:
     - '--enigmafile=${{ inputs.enigma_file }}'
     - ${{ inputs.command }}
