--- a/action.yml
+++ b/action.yml
@@ -10,10 +10,10 @@ inputs:
     required: true
   DOCKER_IMAGE:
     description: 'Docker image name'
-    required: true
+    required: false
   DOCKER_TAG:
     description: 'Docker image tag'
-    required: true
+    required: false
   DOCKER_CLEANUP:
     description: 'Cleanup after push (true or false)'
     required: false
@@ -89,7 +89,7 @@ inputs:
 
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.18'
+  image: 'Dockerfile'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
